    * New bitset "Cap minimum stats to zero" can prevent equipment with
      negative stat bonuses from making a hero's stats negative [James]
    * Maximum Shop ID has been raised from 99 to 32767 [James]
    * Added a general bitset to hide empty save slots at the bottom of the
      save/load menu. (Won't shows less than 4 slots unless you specifically
      set a max lower than 4) [James]

  * New Plotscripting Features
    * "save screenshot" [Ralph]
    * "append number": added "min length" and "pad with zeroes" args [Ralph]
    * "use door": added "fade screen" argument, so you can use a door without
      fading [Ralph]
    * "npc copy number" (opposite to "npc reference") [Ralph]
    * "create line", "slice is line", "get line color", "set line color" [Ralph]
    * "force mount vehicle", "current vehicle id", "current vehicle npc" [James]
    * Missing constants for "get/set menu item subtype":
      menucaption:selectable, menucaption:disabled,
      menuspecial:map always, menuspecial:save always, menuspecial:margins,
      menuspecial:purchases, menuspecial:windowed, menuspecial:fullscreen,
      menuspecial:music volume, menuspecial:sound volume,
      and menutype:caption alias for menutype:label,
      and alias menuitembit:close menu when activated [Ralph]

  * Changes
    * "Previous attack" base ATK stat renamed to "Last damage by attacker"
    * "Caption" menu item type renamed to "Label", the "Unselectable" subtype
      of Labels renamed to "Disabled", and the "Close menu if selected" bit
      renamed to "Close menu when activated"

  * Bugfixes
    * Fix a major memory leak while recording .gifs [Ralph]
    * Couldn't copy-paste text containing characters above ASCII 127 [Ralph]
    * Panel slices set to clip had broken child clipping and positioning
      when inside another clipping slice or over the screen edge [Ralph]
    * In the textbox editor, pressing Ctrl+Left/Right to link to another box