@@ -1623,7 +1623,7 @@ END FUNCTION
 'Whether, according to the in-game meaning of the type and subtype,
 'this menu item can be activated (possibly setting tags and closing the menu)
 FUNCTION menu_item_is_activatable(mi as MenuDefItem) as bool
- IF mi.t = mtypeLabel ANDALSO mi.sub_t = lbDisabled THEN
+ IF mi.t = mtypeLabel ANDALSO (mi.sub_t = lbDisabled OR mi.sub_t = lbUnselectable) THEN
   RETURN NO
  ELSEIF mi.t = mtypeSpecial ANDALSO (mi.sub_t = spMusicVolume OR mi.sub_t = spSoundVolume OR mi.sub_t = spMargins) THEN
   'These menu items have bars, and it doesn't make sense to activate them
